# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,10 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
-import runnerRouter from "./runner";
+import appsRouter from "./apps";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
-router.use(runnerRouter);
+router.use(appsRouter);
 
 export default router;
